--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\ConcatetionLogicLibrary.csproj" />
+    <ProjectReference Include="..\ConcatetionLogicLibrary\ConcatetionLogicLibrary.csproj" />
   </ItemGroup>
 
 </Project>
