--- a/UserInteractiveForm/UserInteractiveForm.csproj
+++ b/UserInteractiveForm/UserInteractiveForm.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\ConcatetionLogicLibrary.csproj" />
+    <ProjectReference Include="..\ConcatetionLogicLibrary\ConcatetionLogicLibrary.csproj" />
   </ItemGroup>
 
 </Project>
