remove extra files

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,80 @@ UserInteractiveForm/obj/UserInteractiveForm.csproj.nuget.dgspec.json
 UserInteractiveForm/obj/UserInteractiveForm.csproj.nuget.g.props
 UserInteractiveForm/obj/UserInteractiveForm.csproj.nuget.g.targets
 UserInteractiveForm/UserInteractiveForm.csproj.user
+ConsoleApp/bin/Debug/net6.0/ClassLibrary1.dll
+ConsoleApp/bin/Debug/net6.0/ClassLibrary1.pdb
+ConsoleApp/bin/Debug/net6.0/ConsoleApp1.deps.json
+ConsoleApp/bin/Debug/net6.0/ConsoleApp1.dll
+ConsoleApp/bin/Debug/net6.0/ConsoleApp1.exe
+ConsoleApp/bin/Debug/net6.0/ConsoleApp1.pdb
+ConsoleApp/bin/Debug/net6.0/ConsoleApp1.runtimeconfig.json
+ConsoleApp/bin/Debug/net6.0/ref/ConsoleApp1.dll
+ConsoleApp/obj/ConsoleApp.csproj.nuget.dgspec.json
+ConsoleApp/obj/ConsoleApp.csproj.nuget.g.props
+ConsoleApp/obj/ConsoleApp.csproj.nuget.g.targets
+ConsoleApp/obj/ConsoleApp1.csproj.nuget.dgspec.json
+ConsoleApp/obj/ConsoleApp1.csproj.nuget.g.props
+ConsoleApp/obj/ConsoleApp1.csproj.nuget.g.targets
+ConsoleApp/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+ConsoleApp/obj/Debug/net6.0/apphost.exe
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.AssemblyInfo.cs
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.AssemblyInfoInputs.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.assets.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.csproj.AssemblyReference.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.GeneratedMSBuildEditorConfig.editorconfig
+ConsoleApp/obj/Debug/net6.0/ConsoleApp.GlobalUsings.g.cs
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.AssemblyInfo.cs
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.AssemblyInfoInputs.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.assets.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.csproj.AssemblyReference.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.csproj.CopyComplete
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.csproj.CoreCompileInputs.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.csproj.FileListAbsolute.txt
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.dll
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.GeneratedMSBuildEditorConfig.editorconfig
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.genruntimeconfig.cache
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.GlobalUsings.g.cs
+ConsoleApp/obj/Debug/net6.0/ConsoleApp1.pdb
+ConsoleApp/obj/Debug/net6.0/ref/ConsoleApp1.dll
+ConsoleApp/obj/project.assets.json
+ConsoleApp/obj/project.nuget.cache
+DotNetFundamentals.sln.bak
+UserInteractiveForm/bin/Debug/net6.0-windows/ref/WinFormsApp1.dll
+UserInteractiveForm/bin/Debug/net6.0-windows/WinFormsApp1.deps.json
+UserInteractiveForm/bin/Debug/net6.0-windows/WinFormsApp1.dll
+UserInteractiveForm/bin/Debug/net6.0-windows/WinFormsApp1.exe
+UserInteractiveForm/bin/Debug/net6.0-windows/WinFormsApp1.pdb
+UserInteractiveForm/bin/Debug/net6.0-windows/WinFormsApp1.runtimeconfig.json
+UserInteractiveForm/obj/Debug/net6.0-windows/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+UserInteractiveForm/obj/Debug/net6.0-windows/apphost.exe
+UserInteractiveForm/obj/Debug/net6.0-windows/ref/WinFormsApp1.dll
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.AssemblyInfo.cs
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.AssemblyInfoInputs.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.assets.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.csproj.AssemblyReference.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.GeneratedMSBuildEditorConfig.editorconfig
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp.GlobalUsings.g.cs
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.AssemblyInfo.cs
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.AssemblyInfoInputs.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.assets.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.csproj.AssemblyReference.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.csproj.CoreCompileInputs.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.csproj.FileListAbsolute.txt
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.csproj.GenerateResource.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.designer.deps.json
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.designer.runtimeconfig.json
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.dll
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.Form1.resources
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.GeneratedMSBuildEditorConfig.editorconfig
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.genruntimeconfig.cache
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.GlobalUsings.g.cs
+UserInteractiveForm/obj/Debug/net6.0-windows/WinFormsApp1.pdb
+UserInteractiveForm/obj/project.assets.json
+UserInteractiveForm/obj/project.nuget.cache
+UserInteractiveForm/obj/WinFormsApp.csproj.nuget.dgspec.json
+UserInteractiveForm/obj/WinFormsApp.csproj.nuget.g.props
+UserInteractiveForm/obj/WinFormsApp.csproj.nuget.g.targets
+UserInteractiveForm/obj/WinFormsApp1.csproj.nuget.dgspec.json
+UserInteractiveForm/obj/WinFormsApp1.csproj.nuget.g.props
+UserInteractiveForm/obj/WinFormsApp1.csproj.nuget.g.targets
+UserInteractiveForm/WinFormsApp.csproj.user
